fixing animation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body{
     color: red;
     margin-top: 100px;
     justify-self: center;
+    flex-wrap: wrap;
 }
 
 
